fixed top tracks not rendering on mobile by adding media query to chart container size

--- a/client/public/style.less
+++ b/client/public/style.less
@@ -1,3 +1,17 @@
+@media only screen and (min-width: 601px) {
+    .chart-container {
+       height:100%;
+       width: 100%
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .chart-container {
+        width: 500px;
+        height: 500px;
+    }
+}
+
 
 
 
